Fixed pictures in Markdown (not tested yet)

--- a/core/tex/dgs.cls
+++ b/core/tex/dgs.cls
@@ -41,6 +41,7 @@
 \RequirePackage{leftidx}
 \RequirePackage{afterpage}
 \RequirePackage{longtable}
+\RequirePackage{graphicx}
 \RequirePackage{etoolbox}
 \RequirePackage{cancel}
 \RequirePackage{fancyhdr}
