--- a/core/tex/hacks.tex
+++ b/core/tex/hacks.tex
@@ -28,5 +28,13 @@
     \DeclareMathSymbol{9}{\mathalpha}{\eu@DigitsArabic@symfont}{`9}
 \makeatother
 
+\makeatletter
+\def\maxwidth{\ifdim\Gin@nat@width>\linewidth\linewidth\else\Gin@nat@width\fi}
+\def\maxheight{\ifdim\Gin@nat@height>\textheight\textheight\else\Gin@nat@height\fi}
+\makeatother
+\setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
+
+\floatplacement{figure}{H}
+
 % Fix Pandoc's tightlist problem
 \providecommand{\tightlist}{}
