--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -77,7 +77,7 @@
 
 \NewDocumentCommand{\ArrowVector}{m}{\overrightarrow{#1}}
 \NewDocumentCommand{\BoldVector}{m}{\mathbf{#1}}
-\NewDocumentCommand{\UnitVector}{m}{\Hat{\vec{#1}}}
+\NewDocumentCommand{\UnitVector}{m}{\mathbf{\Hat[-1.7mm]{\vec{#1}}}}
 
 \NewDocumentCommand{\EvalAt}{m m}{\left.#1\right|_{#2}}
 \NewDocumentCommand{\EvalFromTo}{m m m}{\left.#1\right|_{#2}^{#3}}
