--- a/modules/scholar/templates/handout-students.tex
+++ b/modules/scholar/templates/handout-students.tex
@@ -1,13 +1,13 @@
 (@ extends 'handout-base.tex' @)
 
 (@ block sections @)
-    (@ for sid, section in issue.sections.items() @)
+    (@ for section in issue.sections @)
         \subsection{(* section.name *)}
         \protectedInput{\activeDirectory/(* section.id *)/text.tex}
         (@ if section.problems @)
             \subsubsection{Úlohy}
-            (@ for pid, problem in section.problems.items() @)
-                \paragraph{Úloha (* problem.number *)}
+            (@ for problem in section.problems @)
+                \paragraph{Úloha (* loop.index *)}
                 \protectedInput{\activeDirectory/(* section.id *)/(* problem.id *)/problem.tex}
             (@ endfor @)
         (@ endif @)
