Set caption text to italic

--- a/core/tex/dgs.cls
+++ b/core/tex/dgs.cls
@@ -116,6 +116,7 @@
 \captionsetup[figure]{
     format                  = hang,
     width                   = 0.9\textwidth,
+    textfont                = it,
 }
 
 \renewcommand{\arraystretch}{1.0}
