Microfixes to Makefiles and scholar templates

--- a/modules/naboj/templates/base.tex
+++ b/modules/naboj/templates/base.tex
@@ -1,6 +1,6 @@
 \documentclass[(@ block documentclass @)twoside(@ endblock @)]{dgs}
 
-\input{input/(* module.id *)/(* competition.id *)/static/format-override.tex}
+\input{input/(* module.id *)/(* competition.id *)/.static/format-override.tex}
 (@ block specific @)(@ endblock @)
 
 \newcounter{volume}[section]
