--- a/modules/scholar/templates/base.tex
+++ b/modules/scholar/templates/base.tex
@@ -13,8 +13,8 @@
     \fancyhead[C]{\textit{(* course.name *)}}
     \fancyfoot[C]{\small \thepage/\pageref*{LastPage}}
 
-    \titleformat{\section}[block]{\Huge\bfseries\centering}{}{0pt}{}
-    \titleformat{\subsection}[hang]{\LARGE\bfseries\centering\vspace{4mm}\vspace*{-4mm}}{\Roman{subsection}.\quad}{0pt}{}
+    \titleformat{\section}[block]{\Huge\bfseries\centering}{\Roman{section}. }{0pt}{}
+    \titleformat{\subsection}[hang]{\LARGE\bfseries\vspace{4mm}\vspace*{-4mm}}{}{0pt}{}
     \titleformat{\subsubsection}[hang]{\large\bfseries}{}{0pt}{}[]
     \titleformat{\paragraph}[hang]{\bfseries}{}{0pt}{}[]
     \titleformat{\subparagraph}[hang]{\it\bfseries}{}{0pt}{}[]
