--- a/core/tex/hacks.tex
+++ b/core/tex/hacks.tex
@@ -38,3 +38,9 @@
 
 % Fix Pandoc's tightlist problem
 \providecommand{\tightlist}{}
+
+\newcommand\invisiblesubsection[1]{%
+    \refstepcounter{subsection}%
+    \addcontentsline{toc}{subsection}{\protect\numberline{\thesubsection}#1}%
+    \subsectionmark{#1}%
+}
