--- a/modules/scholar/templates/handout-solutions.tex
+++ b/modules/scholar/templates/handout-solutions.tex
@@ -1,13 +1,6 @@
-(@ extends 'handout-base.tex' @)
+(@ extends 'handout-students.tex' @)
 
-(@ block problems @)
-    \subsection{Úlohy}
-    (@ if issue.problems @)
-        (@ for problem in issue.problems @)
-            \subsubsection{Úloha (* loop.index *)}
-            \protectedInput{\activeDirectory/(* problem.id *)/problem.tex}
-            \paragraph{Riešenie}
-            \protectedInput{\activeDirectory/(* problem.id *)/solution.tex}
-        (@ endfor @)
-    (@ endif @)
-(@ endblock problems @)
+(@ block solution @)
+    \paragraph{Riešenie}
+    \protectedInput{\activeDirectory/(* problem.id *)/solution.tex}
+(@ endblock solution @)
