Fixed counters in homework

--- a/modules/scholar/templates/homework-base.tex
+++ b/modules/scholar/templates/homework-base.tex
@@ -21,6 +21,7 @@
 (@ endblock style @)
 
 (@ block content @)
+    \setcounter{section}{(* issue.number - 1 *)}
     \section{Domáca úloha č. (* issue.number *)}
     \begin{center}
         \textit{%
