Tidied up a bit

--- a/modules/scholar/templates/handout-base.tex
+++ b/modules/scholar/templates/handout-base.tex
@@ -16,6 +16,5 @@
     \section{(* issue.name *)(@ block subtitle @)(@ endblock subtitle @)}
     \invisiblesubsection{Text}
     \protectedInput{\activeDirectory/text.tex}
-    (@ block problems @)
-    (@ endblock problems @)
+    (@ block problems @)(@ endblock problems @)
 (@ endblock content @)
