--- a/modules/naboj/templates/answers-mod5.tex
+++ b/modules/naboj/templates/answers-mod5.tex
@@ -1,8 +1,9 @@
 (@ extends 'base-languages.tex' @)
 
 (@ block content @)
-    \pagestyle{main}
     \thispagestyle{first}
+    \afterpage{\globaldefs=1\restoregeometry}
+
     \vspace*{19mm}
 
     \section{(* i18n.section.answers *)}
