More fixes to templates and builders

--- a/modules/scholar/templates/lecture.tex
+++ b/modules/scholar/templates/lecture.tex
@@ -2,9 +2,7 @@
 
 \setActive{\rootDirectory/(* module.id *)/(* course.id *)/(* lecture.id *)}%
 
-\input{input/scholar/(* course.id *)/static/format-override.tex}
-\input{\activeDirectory/format-course.tex}
-\input{\activeDirectory/format-lecture.tex}
+\input{input/scholar/(* course.id *)/.static/format-override.tex}
 
 \begin{document}
     \pagestyle{lecture}
