Microfixes to siunitx and math

--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -5,6 +5,11 @@
 \DeclareMathOperator{\Div}{\del\cdot}
 \DeclareMathOperator{\Rot}{\del\times}
 
+\DeclareMathOperator{\LXor}{xor}
+\DeclareMathOperator{\LOr}{or}
+\DeclareMathOperator{\LAnd}{and}
+\DeclareMathOperator{\LNand}{nand}
+
 \DeclareMathOperator{\sinc}{sinc}
 
 \NewDocumentCommand{\Diff}{O{}}{\diff^{\,#1}\!}
