Fixed equation numbering in seminar

--- a/modules/seminar/templates/problems.tex
+++ b/modules/seminar/templates/problems.tex
@@ -11,11 +11,12 @@
         Termín odoslania (* round.deadline.strftime('%d. %m. %Y') *)\\[2pt]
         (@ if round.deadlineAbroad is defined @) (pre zahraničie (* round.deadlineAbroad.strftime('%d. %m. %Y') *)(@ endif @)
     }
+    \setcounter{volume}{(* volume.number *)}%
+    \setcounter{semester}{(* semester.number *)}%
+    \setcounter{round}{(* round.number *)}%
+    \setcounter{section}{(* round.number *)}%
 
     (@ for pid, problem in round.problems.items() @)%
-        \setcounter{volume}{(* volume.number *)}%
-        \setcounter{semester}{(* semester.number *)}%
-        \setcounter{round}{(* round.number *)}%
         \setcounter{problem}{(* problem.number *)}%
         \setActive{\rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/(* semester.id *)/(* round.id *)/(* problem.id *)}%
         \subsection{%
