Microfix to template

--- a/modules/seminar/templates/base-booklets.tex
+++ b/modules/seminar/templates/base-booklets.tex
@@ -9,12 +9,10 @@
     \pagestyle{seminar-booklet-body}
 
     \fancyhead[LE,RO]{%
-        \textit{
-            (* self.kind_verbose() *) (* round.number *). kola (* semester.feminine.genitive *) časti%
+        \textit{%
+            (* self.kind_verbose() *) (* round.number *). kola (* semester.feminine.genitive *)
+            časti -- termín (* round.deadline.strftime('%d. %m. %Y') *)%
         }%
-    }
-    \fancyhead[LO,RE]{%
-        \textit{Termín (* round.deadline.strftime('%d. %m. %Y') *)}%
     }
 
     \section{%
