Fixed caption in seminar's PDF string

--- a/modules/seminar/templates/base-booklets.tex
+++ b/modules/seminar/templates/base-booklets.tex
@@ -19,7 +19,7 @@
         \texorpdfstring{%
             (* self.kind_verbose() *) (* round.number *). kola (* semester.feminine.genitive *) časti%
         }{%
-            (* self.kind() *)%
+            (* self.kind_verbose() *)%
         }%
     }
     (@ block subtitle @)(@ endblock subtitle @)
