More style enforcer rules

--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -129,7 +129,7 @@
 \NewDocumentCommand{\Real}{}{\mathbb{R}}
 \NewDocumentCommand{\Complex}{}{\mathbb{C}}
 
-\NewDocumentCommand{\IntervalCC}{m m}{\langle #1; #2\rangle}
-\NewDocumentCommand{\IntervalCO}{m m}{\left\langle #1; #2\right)}
-\NewDocumentCommand{\IntervalOC}{m m}{\left( #1; #2\right\rangle}
-\NewDocumentCommand{\IntervalOO}{m m}{\left( #1; #2\right)}
+\NewDocumentCommand{\IntervalCC}{m m}{\left[#1; #2\right]}
+\NewDocumentCommand{\IntervalCO}{m m}{\left[#1; #2\right)}
+\NewDocumentCommand{\IntervalOC}{m m}{\left(#1; #2\right]}
+\NewDocumentCommand{\IntervalOO}{m m}{\left(#1; #2\right)}
