--- a/core/tex/fonts.tex
+++ b/core/tex/fonts.tex
@@ -13,22 +13,13 @@
     Ligatures       = TeX
 }
 
-\setallmainfonts[
+\setmainfont[
     Path            = core/fonts/MinionPro/ ,
     Extension       = .otf ,
-    UprightFont     = *-r ,
-    BoldFont        = *-b ,
-    ItalicFont      = *-i ,
-    BoldItalicFont  = *-bi
-]{MinionPro}
-
-\setmathfont(Digits,Latin,Greek)[
-    Path            = core/fonts/MinionPro/ ,
-    Extension       = .otf ,
-    UprightFont     = *-r ,
-    BoldFont        = *-b ,
-    ItalicFont      = *-i ,
-    BoldItalicFont  = *-bi
+    UprightFont     = *-Regular ,
+    BoldFont        = *-Bold ,
+    ItalicFont      = *-It ,
+    BoldItalicFont  = *-BoldIt
 ]{MinionPro}
 
 \setmonofont[
@@ -50,20 +41,6 @@
     ItalicFont      = *-i ,
     BoldItalicFont  = *-bi
 ]{verdana}
-
-% Fixes mathspec bug -- URL numbers are normally rendered with upright font
-\makeatletter
-    \DeclareMathSymbol{0}{\mathalpha}{\eu@DigitsArabic@symfont}{`0}
-    \DeclareMathSymbol{1}{\mathalpha}{\eu@DigitsArabic@symfont}{`1}
-    \DeclareMathSymbol{2}{\mathalpha}{\eu@DigitsArabic@symfont}{`2}
-    \DeclareMathSymbol{3}{\mathalpha}{\eu@DigitsArabic@symfont}{`3}
-    \DeclareMathSymbol{4}{\mathalpha}{\eu@DigitsArabic@symfont}{`4}
-    \DeclareMathSymbol{5}{\mathalpha}{\eu@DigitsArabic@symfont}{`5}
-    \DeclareMathSymbol{6}{\mathalpha}{\eu@DigitsArabic@symfont}{`6}
-    \DeclareMathSymbol{7}{\mathalpha}{\eu@DigitsArabic@symfont}{`7}
-    \DeclareMathSymbol{8}{\mathalpha}{\eu@DigitsArabic@symfont}{`8}
-    \DeclareMathSymbol{9}{\mathalpha}{\eu@DigitsArabic@symfont}{`9}
-\makeatother
 
 \DeclareFontFamily{U}{skulls}{}
 \DeclareFontShape{U}{skulls}{m}{n}{ <-> skull }{}
