--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -6,10 +6,10 @@
 \DeclareMathOperator{\Div}{\del\cdot}
 \DeclareMathOperator{\Rot}{\del\times}
 
-\DeclareMathOperator{\LXor}{xor}
-\DeclareMathOperator{\LOr}{or}
-\DeclareMathOperator{\LAnd}{and}
-\DeclareMathOperator{\LNand}{nand}
+\DeclareMathOperator{\LXor}{\quad\lxor\quad}
+\DeclareMathOperator{\LOr}{\quad\lor\quad}
+\DeclareMathOperator{\LAnd}{\quad\land\quad}
+\DeclareMathOperator{\LNand}{\quad\lnand\quad}
 
 \DeclareMathOperator{\sinc}{sinc}
 
