Improved dgs-copy

--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -2,6 +2,7 @@
 \DeclareMathOperator{\pdiff}{\partial\!}
 \DeclareMathOperator{\fdiff}{\Delta\!}
 \DeclareMathOperator{\sdiff}{\delta\!}
+\DeclareMathOperator{\laplacian}{\Delta\!}
 \DeclareMathOperator{\del}{\raisebox{0.06em}{\ensuremath{\vec{\nabla}}}}
 \DeclareMathOperator{\Div}{\del\cdot}
 \DeclareMathOperator{\Rot}{\del\times}
