--- a/modules/naboj/templates/instructions-online.tex
+++ b/modules/naboj/templates/instructions-online.tex
@@ -3,5 +3,6 @@
 (@ block content @)
     \pagestyle{instructions-online}
     \section{(* i18n.instructions_online.title *)}
-    \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/instructions-online-text.tex}
+    \setActive{\rootDirectory/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/_extras}%
+    \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/instructions-online-inner.tex}
 (@ endblock @)
